examples/cpp/failing/field_visibility_conflict/Left.cc
class MyClass {
    public:
        int field_1;
    private:
        size_t field_2;
};
